--- a/templates/contact/order.html.twig
+++ b/templates/contact/order.html.twig
@@ -47,7 +47,7 @@
 		<div class="row justify-content-center">
 			<div class="col-md-8 mt-md-5">
 				<div id="prospectForm">
-					{{ form_start(form) }}
+					{{ form_start(form, {'attr': {'id': 'form_prospect'}}) }}
 					{{ form_errors(form) }}
 					<div class="row align-items-center justify-content-center mx-2">
 						<div class="col-12 col-md-6 mt-3">
@@ -92,7 +92,8 @@
 							{{ form_errors(form.message) }}
 						</div>
 						<div class="col-12 mt-1 form-group">
-							<button class="btn btn-custom float-end" type="submit">Commander</button>
+							{% include '_partials/_hcaptcha_order_submit_button.html.twig' %}
+							{# <button class="btn btn-custom float-end" type="submit">Commander</button> #}
 						</div>
 					</div>
 					{# {{ form_end(form, {'render_rest': false}) }} #}
@@ -110,5 +111,6 @@
 {% endblock %}
 {% block javascripts %}
 	{{ parent() }}
-
+	<script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+	{% include '_partials/_hcaptcha_callback_script.html.twig' %}
 {% endblock %}
