--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,13 @@ body {
     color:#ffffff!important; 
 } 
 
+.form-control-check {
+  background-color:rgba(0,0,0,0) !important;
+  border:none !important;
+  color:#ffffff!important;
+  font-size: 12px; 
+}
+
 
 .form-arround {
   background-color:rgba(0,0,0,0) !important;
