--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -25,7 +25,7 @@
 		</div>
 		<div class="row align-items-center justify-content-center mt-5 px-3">
 			{% for product in products %}
-				<div class="col-12 col-md-3 text-center m-3 {% if product.isActive|e %} border border-success {% else %} border border-danger{% endif %} cardAnim">
+				<div id="product-{{ product.name|e }}" class="col-12 col-md-3 text-center m-3 {% if product.isActive|e %} border border-success {% else %} border border-danger{% endif %} cardAnim">
 					<a href="{{ path('admin_show' , {'slug':product.slug|e} ) }}">
 						<div class="card mb-3">
 							<h3 class="card-header">{{ product.name|e }}</h3>
